--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,5 +8,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: "helloworld-myapp"
+          heroku_app_name: "thawing-reaches-18664"
           heroku_email: "q8tpk5yaqkutovncyabe@gmail.com"
