--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,7 @@
 name: GitHub Actions Demo
 on: [push]
 jobs:
-  Run Rspec:  # このjobの名前
+  name: Run Rspec  # このjobの名前
     runs-on: ubuntu-latest  # このjobを実行するコンテナ
     steps:
       - uses: actions/checkout@v2
