--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,13 +1,14 @@
 name: Github Action with Rspec
 on: [push]
 jobs:
-  check-bats-version:
+  Run Rspec:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-      - run: npm install -g bats
-      - run: bats -v
+      - name: Set up Ruby
+      # - uses: actions/checkout@v2
+      # - uses: actions/setup-node@v1
+      # - run: npm install -g bats
+      # - run: bats -v
   # Run Rspec # このjobの名前
   #   runs-on: ubuntu-latest  # このjobを実行するコンテナ
   #   steps:
