--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
       # - uses: actions/checkout@v2
       # - uses: actions/setup-node@v1
       # - run: npm install -g bats
