--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,8 +4,7 @@ jobs:
   Run Rspec:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
       # - uses: actions/checkout@v2
       # - uses: actions/setup-node@v1
       # - run: npm install -g bats
