--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,7 +17,7 @@ jobs:  # 各jobを定義
           MYSQL_USER: root
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_PASSWORD:
-        ports:  使うportを指定。ポートフォワードできる
+        ports:  # 使うportを指定。ポートフォワードできる
           - 3306
 
     steps:  # 各実行step
