--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -34,7 +34,7 @@ jobs:  # 各jobを定義
       - name: Setup DB
         run: |
           bin/rails db:create
-          bin/rails db:migrate
+          bin/rails db:schema:load
 
       - name: Run tests  # step name
         run: bundle exec rspec
