--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -33,11 +33,11 @@ jobs:  # 各jobを定義
 
       - name: Setup DB
         run: |
-          bin/rails db:create
-          bin/rails db:schema:load
+          bin/rails db:create  
+      # bin/rails db:schema:load
 
-      - name: Run tests  # step name
-        run: bundle exec rspec
+      # - name: Run tests  # step name
+      #   run: bundle exec rspec
 
       # - uses: actions/checkout@v2
       # - uses: actions/setup-node@v1
