--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,30 +8,34 @@ jobs:  # 各jobを定義
   test:  # job name
     runs-on: ubuntu-latest  # jobを実行する環境を指定
 
-    services:
-      mysql:  # service name
-        image: mysql:8.0  # 使いたいimageを指定
-        env:  # 環境変数を定義
-          MYSQL_HOST: 127.0.0.1
-          MYSQL_DB: github_actions_test
-          MYSQL_USER: root
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_PASSWORD:
-        ports:  # 使うportを指定。ポートフォワードできる
-          - 3306
+    # services:
+    #   mysql:  # service name
+    #     image: mysql:8.0  # 使いたいimageを指定
+    #     env:  # 環境変数を定義
+    #       MYSQL_HOST: 127.0.0.1
+    #       MYSQL_DB: github_actions_test
+    #       MYSQL_USER: root
+    #       MYSQL_ALLOW_EMPTY_PASSWORD: yes
+    #       MYSQL_PASSWORD:
+    #     ports:  # 使うportを指定。ポートフォワードできる
+    #       - 3306
 
     steps:  # 各実行step
       - uses: actions/checkout@v2  # 使用するソースコード。repositoryからdownloadする
-      - name: Set up Ruby 3.0  # step name
+      - name: Setup Ruby 3.0  # step name
         uses: ruby/setup-ruby@v1  # # 使用するソースコード。repositoryからdownloadする
         with:  # 付属情報
           ruby-version: 3.0
-          bundler: default
-          bundle-cache: true
+
+      - name: setup MySQL
+        run: |
+          apt-get update
+          apt-get install libmysqlclient-dev
+
       - name: Install dependencies  # step name
         run: bundle install  # 実行するcommand
 
-      - name: Setup DB
+      - name: crete DB
         run: |
           bin/rails db:create  
       # bin/rails db:schema:load
