--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -35,6 +35,10 @@ jobs:  # 各jobを定義
           gem install bundler
           bundle install --jobs 4 --retry 3 --path vendor/bundle
       
+      - name: Check yarn
+        run: |
+          yarn install --check-files
+      
       - name: Migration
         run: |
           bundle exec rails db:create
