--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -12,6 +12,5 @@ jobs:
     steps:
       - name: Check branch
       - uses: actions/checkout@v2
-      - run: |
-        git status
-        git branch
+      - run: git status
+      - run: git branch
