--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -8,9 +8,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-  
-    steps:
-      - uses: actions/checkout@v2
-      - name: Check branch
+    steps:  # 各実行step
+      - uses: actions/checkout@v2  # 使用するソースコード。repositoryからdownloadする
+      - name: Setup Ruby 3.0  # step name
       - run: git status
       - run: git branch
