--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,7 +2,8 @@ name: Github Action with Rspec  # workflow name
 
 on:  # トリガーにするイベントを定義
   push:  # repositoryにpush
-    branches: [ main ]  # mainブランチが対象
+    branches:
+      - main  # mainブランチが対象
 
 jobs:  # jobを定義していく
   init:  # job name
