--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,7 +2,7 @@ name: Github Action with Rspec  # workflow name
 
 on:  # トリガーにするイベントを定義
   push:  # repositoryにpush
-    branches: [ develop ]  # mainブランチが対象
+    branches: [ main ]  # mainブランチが対象
 
 jobs:  # jobを定義していく
   init:  # job name
@@ -48,32 +48,3 @@ jobs:  # jobを定義していく
       
       - name: Run rspec
         run: bundle exec rspec
-
-  # - name: Run tests  # step name
-  #   run: bundle exec rspec
-
-  # - uses: actions/checkout@v2
-  # - uses: actions/setup-node@v1
-  # - run: npm install -g bats
-  # - run: bats -v
-  # Run Rspec # このjobの名前
-  #   runs-on: ubuntu-latest  # このjobを実行するコンテナ
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Set up Ruby 3.0
-  #       uses: action/setup-ruby@v1
-  #       with:
-  #         ruby-version: 3.0.2
-  #     - name: Test with Rspec
-  #       run: |
-  #         gem install bundler
-  #         bundle install --path vendor/bundle --quiet --jobs 4 --retry 3
-  #         bundle exec rspec
-
-    # steps:
-    #   - uses: actions/checkout@v2
-    #   - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-    #     with:
-    #       heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-    #       heroku_app_name: "thawing-reaches-18664"
-    #       heroku_email: "q8tpk5yaqkutovncyabe@gmail.com"
