--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -1,4 +1,4 @@
-name: Send to Slack
+name: Slack Notification
 
 on:
   push:
@@ -8,10 +8,6 @@ jobs:
   send-message:
     runs-on: ubuntu-latest
     steps:
-      - name: Send custom JSON data to Slack workflow
-        id: slack
-        uses: slackapi/slack-github-action@v1.14.0
-        with:
-          payload: "{\"key\":\"value\",\"foo\":\"bar\"}" # This data can be any valid JSON from a previous step in the GitHub Action
+        uses: rtCamp/action-slack-notify@v2
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL　}}
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL　}}
