--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -11,3 +11,5 @@ jobs:
         - uses: rtCamp/action-slack-notify@v2
           env:
             SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL　}}
+            SLACK_CHANNEL: notifications-from-github
+            SLACK_MESSAGE: 'Post Content :rocket:'
