--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v2
-          # env:
-          #   SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL　}}
-          #   SLACK_CHANNEL: notifications-from-github
-          #   SLACK_MESSAGE: 'Post Content :rocket:'
-        - run: curl -X POST -H 'Content-type application/json' --data '{"text":"処理が終了しました！"}' ${{ secrets.SLACK_WEBHOOK_URL　}}
+        - run: |
+            curl -X POST -H \
+            'Content-type application/json' \
+            --data '{"text":"処理が終了しました！"}' \
+            ${{ secrets.SLACK_WEBHOOK_URL　}}
