--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -10,9 +10,14 @@ jobs:
     steps:
         - uses: actions/checkout@v2
         - run: |
+          data=$(cat <<EOF
+          {
+            "text":"Succses",
+            "GITHUB_ACTION_PATH":${{ GITHUB_ACTION_PATH }}
+          }
+          EOF
+          )
             curl -X POST \
                  -H 'Content-type: application/json; charset=utf-8' \
-                 --data '{
-                   "text":"処理が終了しました！",
-                   "GITHUB_ACTION_PATH": '${{ GITHUB_ACTION_PATH }}'}' \
+                 --data '$data' \
                  ${{ secrets.SLACK_WEBHOOK_URL　}}
