--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -13,7 +13,7 @@ jobs:
           data=$(cat <<EOF
           {
             "text":"Succses",
-            "GITHUB_ACTION_PATH":${{ GITHUB_ACTION_PATH }}
+            "GITHUB_ACTION_PATH": \${{ GITHUB_ACTION_PATH }}
           }
           EOF
           )
