--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
         - uses: actions/checkout@v2
         - run: |
-          GITHUB_ACTIONS_PATH= ${{ GITHUB_ACTIONS_PATH }}
+          echo "Deploying to production server on branch $GITHUB_REF"
