--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -9,4 +9,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v2
-        - run: echo "Deploying to production server on branch $GITHUB_REF"
+        - run: |
+          echo "Deploying to production server on branch $GITHUB_REF" \
