--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
         - uses: actions/checkout@v2
         - run: |
-          echo "Deploying to production server on branch $GITHUB_REF" \
+          echo "Deploying to production server on branch \$GITHUB_REF"
