--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -10,5 +10,5 @@ jobs:
     steps:
         - uses: actions/checkout@v2
         - run: |
-            FOO= ${{ GITHUB_JOB }}
+            FOO= ${{ CI }}
             echo "The FOO is ${FOO}"
