--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -7,9 +7,6 @@ on:
 jobs:
   send-message:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_WORKFLOW: ${{ GITHUB_WORKFLOW }}
     steps:
         - uses: actions/checkout@v2
-        - run: |
-            echo "The FOO is ${GITHUB_WORKFLOW}"
+        - run: echo "The FOO is $GITHUB_WORKFLOW"
