--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -9,4 +9,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v2
-        - run: echo "The FOO is ${{ GITHUB_WORKFLOW }}"
+        - run: echo "Deploying to production server on branch $GITHUB_REF"
