--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -9,5 +9,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v2
-        - run: |
-            echo "Deploying to production server on branch $GITHUB_WORKSPACE"
+        - run: echo "Author name ${{ github.actor }}"
