--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -9,4 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v2
-        - run: echo "Author name ${{ github.actor }}"
+        - run: echo "Author name \n ${{ github.actor }}"
+        - run: echo "Repository URL \n ${{ github.event.repository.url }}"
+        - run: echo "GitHub Actions URL ${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}"
