--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -9,6 +9,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v2
-        - run: echo "Author name \n ${{ github.actor }}"
-        - run: echo "Repository URL \n ${{ github.event.repository.url }}"
+        - run: echo "Author name ${{ github.actor }}"
+        - run: echo "Repository URL ${{ github.event.repository.url }}"
         - run: echo "GitHub Actions URL ${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}"
+          run: |
+            data=$(cat <<EOF
+            {
+              "author_name": "${{ github.actor }}",
+              "title": "Success"
+            }
+            )
+            curl -X POST \
+                 -H "Content-type: application/json; charset=utf-8" \
+                 -d "$data" \
+                 ${{ secrets.SLACK_WEBHOOK_URL }}
