--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -12,7 +12,7 @@ jobs:
         - run: echo "Author name ${{ github.actor }}"
         - run: echo "Repository URL ${{ github.event.repository.url }}"
         - run: echo "GitHub Actions URL ${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}"
-          run: |
+        - run: |
             data=$(cat <<EOF
             {
               "author_name": "${{ github.actor }}",
