--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -18,6 +18,7 @@ jobs:
               "author_name": "${{ github.actor }}",
               "title": "Success"
             }
+            EOF
             )
             curl -X POST \
                  -H "Content-type: application/json; charset=utf-8" \
