--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -22,5 +22,5 @@ jobs:
             )
             curl -X POST \
                  -H "Content-type: application/json; charset=utf-8" \
-                 --data '{"text":"処理が終了しました！"}' \
+                 --data @message.json \
                  ${{ secrets.SLACK_WEBHOOK_URL }}
