--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -15,5 +15,5 @@ jobs:
         - run: |
             curl -X POST \
                  -H "Content-type: application/json; charset=utf-8" \
-                 --data @message.json \
+                 -d @message.json \
                  ${{ secrets.SLACK_WEBHOOK_URL }}
