--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -15,13 +15,22 @@ jobs:
         - run: |
             curl -X POST \
                  -H "Content-type: application/json; charset=utf-8" \
-                 -d '{"blocks": [ 
-                   {
-                     "type": "section",
-                     "text": {
-                       "type": "mrkdwn",
-                       "text": "New Paid Time Off request from <example.com|Fred Enriquez>\n\n<https://example.com|View request>"
-                     }
-                   }
-                 ] }' \
+                 -d '{
+                        "blocks": [ 
+                          {
+                            "type": "section",
+                              "text": {
+                                "type": "mrkdwn",
+                                "text": "New Paid Time Off request from <example.com|Fred Enriquez>\n\n<https://example.com|View request>"
+                              }
+                          },
+                          {
+                            "type": "section",
+                              "text": {
+                                "type": "mrkdwn",
+                                "text": "${{ github.actor }}"
+                              }
+                          }
+                        ] 
+                      }' \
                  ${{ secrets.SLACK_WEBHOOK_URL }}
