--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -21,7 +21,7 @@ jobs:
                             "type": "section",
                               "text": {
                                 "type": "mrkdwn",
-                                "text": "*${{ GITHUB_WORKFLOW }}*"
+                                "text": "*$GITHUB_WORKFLOW*"
                               }
                           },
                           {
