--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -8,7 +8,7 @@ jobs:
   send-message:
     runs-on: ubuntu-latest
     env:
-      GITHUB_WORKFLOW: ${{ GITHUB_WORKFLOW }}
+      GITHUB_WORKFLOW: $GITHUB_WORKFLOW
     steps:
         - uses: actions/checkout@v2
         # - run: echo "Author name ${{ github.actor }}"
