--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -23,7 +23,7 @@ jobs:
                             "type": "section",
                               "text": {
                                 "type": "mrkdwn",
-                                "text": "*${{ GITHUB_WORKFLOW }}*"
+                                "text": "*${GITHUB_WORKFLOW}*"
                               }
                           },
                           {
