--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       # HELLO: ${{ github.actor }}
-      VAR: ${GITHUB_WORKFLOW}
+      VAR: ${$GITHUB_REF}
     steps:
         - uses: actions/checkout@v2
         # - run: echo "Author name ${{ github.actor }}"
@@ -24,7 +24,7 @@ jobs:
                             "type": "section",
                               "text": {
                                 "type": "mrkdwn",
-                                "text": "'$GITHUB_REF'"
+                                "text": "'$VAR'"
                               }
                           },
                           {
