--- a/.github/workflows/send-to-slack.yml
+++ b/.github/workflows/send-to-slack.yml
@@ -24,7 +24,7 @@ jobs:
                             "type": "section",
                               "text": {
                                 "type": "mrkdwn",
-                                "text": "${{ github.ref }}"
+                                "text": "${{ GITHUB_REF }}"
                               }
                           },
                           {
